// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gVpmpR jHeyCl"
    role="document"
  >
    <div
      class="sc-lbFCLI bJURRH sc-cbuLjy diUqmH"
      tabindex="0"
    >
      <span
        class="sc-hjOXZQ hIkkvv"
      >
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jlJOIR jAIKjU sc-eVYbGh mJyt"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dTCDEk BaKci"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-htBWof gMPhTM"
    >
      : 
    </i>
    <span
      class="sc-kTmAaw fNCIBL"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gVpmpR jHeyCl"
    role="document"
  >
    <div
      class="sc-lbFCLI bJURRH sc-cbuLjy diUqmH"
      tabindex="0"
    >
      <span
        class="sc-hjOXZQ hIkkvv"
      >
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jlJOIR jAIKjU sc-eVYbGh mJyt"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dTCDEk BaKci"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-htBWof gMPhTM"
    >
      : 
    </i>
    <span
      class="sc-kTmAaw fNCIBL"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gVpmpR jHeyCl"
    role="document"
  >
    <div
      class="sc-lbFCLI bJURRH sc-cbuLjy diUqmH"
      tabindex="0"
    >
      <span
        class="sc-hjOXZQ hIkkvv"
      >
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jlJOIR jAIKjU sc-eVYbGh mJyt"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dTCDEk BaKci"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-htBWof gMPhTM"
    >
      : 
    </i>
    <span
      class="sc-kTmAaw fNCIBL"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-jlJOIR jAIKjU sc-dwkskT gKNSEU"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dTCDEk BaKci"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gVpmpR jHeyCl"
    role="document"
  >
    <div
      class="sc-lbFCLI bJURRH sc-cbuLjy diUqmH"
      tabindex="0"
    >
      <span
        class="sc-hjOXZQ hIkkvv"
      >
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jlJOIR jAIKjU sc-eVYbGh mJyt"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dTCDEk BaKci"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-htBWof gMPhTM"
    >
      : 
    </i>
    <span
      class="sc-kTmAaw fNCIBL"
    >
      hey
       
      <span
        class="sc-jlJOIR jAIKjU sc-dwkskT gKNSEU"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dTCDEk BaKci"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-jlJOIR jAIKjU sc-dwkskT gKNSEU"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dTCDEk BaKci"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gVpmpR jHeyCl"
    role="document"
  >
    <div
      class="sc-lbFCLI bJURRH sc-cbuLjy diUqmH"
      tabindex="0"
    >
      <span
        class="sc-hjOXZQ hIkkvv"
      >
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jlJOIR jAIKjU sc-eVYbGh mJyt"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dTCDEk BaKci"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-htBWof gMPhTM"
    >
      : 
    </i>
    <span
      class="sc-kTmAaw fNCIBL"
    >
      hey
       
      <span
        class="sc-jlJOIR jAIKjU sc-dwkskT gKNSEU"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dTCDEk BaKci"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gVpmpR jHeyCl"
    role="document"
  >
    <div
      class="sc-lbFCLI bJURRH sc-cbuLjy diUqmH"
      tabindex="0"
    >
      <span
        class="sc-hjOXZQ hIkkvv"
      >
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jlJOIR jAIKjU sc-eVYbGh mJyt"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dTCDEk BaKci"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-htBWof gMPhTM"
    >
      : 
    </i>
    <span
      class="sc-kTmAaw fNCIBL"
    >
      <span
        class="sc-jlJOIR jAIKjU sc-dwkskT gKNSEU"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dTCDEk BaKci"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gVpmpR jHeyCl"
    role="document"
  >
    <div
      class="sc-lbFCLI bJURRH sc-cbuLjy diUqmH"
      tabindex="0"
    >
      <span
        class="sc-hjOXZQ hIkkvv"
      >
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jlJOIR jAIKjU sc-eVYbGh mJyt"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dTCDEk BaKci"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-htBWof gMPhTM"
    >
      : 
    </i>
    <span
      class="sc-kTmAaw fNCIBL"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-jlJOIR jAIKjU sc-dwkskT gKNSEU"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dTCDEk BaKci"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-gVpmpR inJAQG"
    role="document"
  >
    <div
      class="sc-lbFCLI bJURRH sc-cbuLjy diUqmH"
      tabindex="0"
    >
      <span
        class="sc-hjOXZQ hIkkvv"
      >
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-htBWof gMPhTM"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jlJOIR jAIKjU sc-eVYbGh mJyt"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dTCDEk BaKci"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-htBWof gMPhTM"
    >
      : 
    </i>
    <span
      class="sc-kTmAaw fNCIBL"
    >
      Hey
       
      <span
        class="sc-jlJOIR jAIKjU sc-dwkskT gKNSEU"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dTCDEk BaKci"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
